fix spacing bug in non-details items

--- a/ui/sass/modules/_managelists.sass
+++ b/ui/sass/modules/_managelists.sass
@@ -24,7 +24,11 @@
 
   .item
     +pie-clearfix
+    +padding-leader(.25)
+    +padding-trailer(.25)
     clear: both
+    &.details
+      padding: 0
 
   .summary, .content
     +pie-clearfix
